--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-dom": "^16.3.2",
     "web3": "^1.0.0-beta.34",
     "polymath-core-v1.1.0": "npm:polymath-core@1.1.0",
-    "polymath-core-v1.1.1": "npm:polymath-core@1.1.1"
+    "polymath-core-v1.1.1": "npm:polymath-core@1.1.1",
+    "polymath-core-v1.2.1": "npm:polymath-core@1.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
