--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
     "koa": "^2.5.0",
     "koa-body": "^2.5.0",
     "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
     "mongoose": "^5.0.14",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "web3": "^1.0.0-beta.34",
     "polymath-core-v1.1.0": "npm:polymath-core@1.1.0",
     "polymath-core-v1.1.1": "npm:polymath-core@1.1.1",
-    "polymath-core-v1.2.1": "npm:polymath-core@1.2.1"
+    "polymath-core-v1.2.1": "npm:polymath-core@1.2.1",
+    "polymath-core-v1.3.2": "npm:polymath-core@1.3.2",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "web3": "^1.0.0-beta.34"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
