--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "polymath-core-v1.1.1": "npm:polymath-core@1.1.1",
     "polymath-core-v1.2.1": "npm:polymath-core@1.2.1",
     "polymath-core-v1.3.2": "npm:polymath-core@1.3.2",
+    "polymath-core-v1.3.3": "npm:polymath-core@1.3.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "web3": "^1.0.0-beta.34"
